Setup of authentication and registration endpoints on the backend and the index.js and App.js files on the frontend.

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,3 @@
 MONGODB_CONNECTION_STRING=mongodb+srv://vanvuurenjohann124:YjCY7KnrftufIuNt@cooltech.ucwzcqy.mongodb.net/
 PORT=8000
+JWT_SECRET=CODE_3141
