--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "dependencies": {
+    "body-parser": "1.20.2",
     "cookie-parser": "~1.4.4",
     "cors": "2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "helmet": "7.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "9.0.0",
     "mongodb": "5.5.0",
     "mongoose": "7.2.2",
     "morgan": "~1.9.1"
